--- a/MVC6CRUD/Views/Product/_AddProduct.cshtml
+++ b/MVC6CRUD/Views/Product/_AddProduct.cshtml
@@ -42,7 +42,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="CategoryId" class="control-label"></label>
-                        @*<select class="form-select single-select dropdown" asp-for="CategoryId" asp-items="Model.Category"></select>*@
+                        @*<select class="form-select single-select dropdown" asp-for="CategoryId" asp-items="Model.Category.ToList()"></select>*@
                         <select asp-for="CategoryId" class="form-control single-select dropdown"
                                 asp-items="ViewBag.category"
                                 id="CategoryId">
